Добавлена документация бота

--- a/site/resources.html
+++ b/site/resources.html
@@ -33,6 +33,16 @@
 			<h2>Полезные ресурсы</h2>
 
 			<article>
+				<h3>Главный партнер проекта</h3>
+				<div class="partner-highlight">
+					<h4>Мосволонтер</h4>
+					<p>Центр волонтерского движения Москвы, оказывающий поддержку социальным инициативам.</p>
+					<a href="https://mosvolonter.ru" class="resource-link" target="_blank">Перейти на сайт Мосволонтера</a>
+					<p>Совместно с Мосволонтером мы реализуем программы сопровождения и адаптации людей с ОВЗ.</p>
+				</div>
+			</article>
+
+			<article>
 				<h3>Дизайн проекта</h3>
 				<p>Макеты всех страниц нашего сайта в Figma:</p>
 				<a href="https://www.figma.com/design/6GBiugGWMh3fwpYS8xzTNl/Untitled?node-id=0-1&p=f&t=wnIDRHpBRuqskFXz-0" class="resource-link" target="_blank">Открыть в Figma</a>
@@ -41,37 +51,38 @@
 			<article>
 				<h3>Партнерские организации</h3>
 				<ul class="resource-list">
-					<li><a href="https://perspektiva-inva.ru/" target="_blank">РООИ "Перспектива"</a> - организация, защищающая права людей с инвалидностью</li>
-					<li><a href="https://www.mos.ru/city/projects/bezgraniz/" target="_blank">Безграничные возможности</a> - проект правительства Москвы</li>
-					<li><a href="https://volonter.ru/" target="_blank">Добровольцы России</a> - платформа для волонтеров</li>
+					<li><strong>Мосволонтер</strong> - центр волонтерского движения Москвы (<a href="https://mosvolonter.ru" target="_blank">mosvolonter.ru</a>)</li>
+
 				</ul>
 			</article>
 
 			<article>
-				<h3>Полезные статьи</h3>
+				<h3>Полезные материалы</h3>
 				<ul class="resource-list">
-					<li><a href="https://habr.com/ru/articles/436880/" target="_blank">Доступность веб-интерфейсов</a></li>
+					<li><a href="https://habr.com/ru/articles/436880/" target="_blank">Доступность веб-интерфейсов</a> - практическое руководство</li>
 					<li><a href="https://www.w3.org/WAI/standards-guidelines/wcag/ru" target="_blank">Руководство по доступности веб-контента (WCAG)</a></li>
 					<li><a href="https://минтруд.рф/docs/1512" target="_blank">Государственная программа "Доступная среда"</a></li>
+					<li><a href="https://mosvolonter.ru/education" target="_blank">Образовательные программы Мосволонтера</a></li>
 				</ul>
 			</article>
 
 			<article>
 				<h3>Контакты</h3>
-				<p>Если у вас есть вопросы или предложения по проекту, свяжитесь с нами:</p>
+				<p>Для сотрудничества с Мосволонтером и другими партнерами проекта:</p>
 				<div class="contacts">
-					<p><strong>Email:</strong> <a href="mailto:support@podderzhka-ryadom.ru">support@podderzhka-ryadom.ru</a></p>
-					<p><strong>Телефон:</strong> +7 (495) 123-45-67</p>
-					<p><strong>Адрес:</strong> Москва, ул. Прянишникова, 2а, Московский Политехнический Университет</p>
+					<p><strong>Координатор партнерских программ:</strong> Иванова Мария</p>
+					<p><strong>Email:</strong> <a href="mailto:partners@podderzhka-ryadom.ru">partners@podderzhka-ryadom.ru</a></p>
+					<p><strong>Телефон:</strong> +7 (495) 123-45-67 (доб. 102)</p>
+					<p><strong>Адрес для встреч:</strong> Москва, Волонтерский проезд, 3 (офис Мосволонтера)</p>
 				</div>
-				<img src="images/map.jpg" alt="Карта проезда" class="contact-map">
 			</article>
 		</section>
 	</main>
 
 	<footer>
 		<div class="container">
-			<p>&copy; 2025 Проект "Поддержка рядом". Московский Политехнический Университет.</p>
+			<p>&copy; 2025 Проект "Поддержка рядом". Разработано при поддержке Мосволонтера.</p>
+			<p>Московский Политехнический Университет.</p>
 		</div>
 	</footer>
 </body>
