Добавлены события взаимодействия с партнером

--- a/site/journal.html
+++ b/site/journal.html
@@ -46,11 +46,11 @@
 					</div>
 					<div class="gallery-item">
 						<img src="images/tm2.jpg" alt="Личный кабинет">
-						<div class="gallery-caption">Личный кабинет</div>
+						<div class="gallery-caption">Форма регистрации</div>
 					</div>
 					<div class="gallery-item">
 						<img src="images/tm4.jpg" alt="Форма запроса">
-						<div class="gallery-caption">Форма запроса помощи</div>
+						<div class="gallery-caption">Страница регистрации</div>
 					</div>
 				</div>
 
@@ -115,6 +115,43 @@
 					<li>Каким образом волонтеры смогут находить подходящие задания</li>
 					<li>Механизмы обратной связи и оценки качества помощи</li>
 				</ul>
+
+				<div class="journal-author">Автор: Колотыгин Д.А.</div>
+			</article>
+
+			<article class="journal-entry">
+				<div class="journal-date">22 мая 2025</div>
+				<h3>Взаимодействие с партнером университета - МосТрансПроект</h3>
+				<p>На этой неделе наша команда посетила познавательную лекцию от стратегического партнера университета - <strong>МосТрансПроекта</strong>. Это ведущая организация в области
+					транспортного планирования и инфраструктурных решений Москвы, которая активно внедряет современные технологии в свою работу.</p>
+
+				<div class="image-gallery">
+					<div class="gallery-item">
+						<img src="images/Mos3.jpg" alt="Лекция МосТрансПроекта">
+						<div class="gallery-caption">Знакомство с проектами компании</div>
+					</div>
+					<div class="gallery-item">
+						<img src="images/Mos6.jpg" alt="Технологии МосТрансПроекта">
+						<div class="gallery-caption">Фото со спикером</div>
+					</div>
+				</div>
+
+				<p>Ключевые моменты из выступления представителей компании:</p>
+				<ul>
+					<li><strong>Искусственный интеллект</strong> в анализе транспортных потоков - система обрабатывает данные с 383 датчиков по всей Москве</li>
+					<li><strong>Безопасное хранение данных</strong> - используется многоуровневая система защиты информации, соответствующая государственным стандартам</li>
+					<li><strong>BI-платформа</strong> для принятия решений на основе 55 различных показателей</li>
+					<li>Разработка <strong>"цифрового двойника"</strong> транспортной системы города</li>
+					<li>Система автоматического контроля качества данных (Data Quality)</li>
+				</ul>
+
+				<p>Особый интерес вызвала их разработка - <strong>"Узнай про ЖК"</strong> - рейтинговая система, которая оценивает жилые комплексы по 30 параметрам, включая доступность транспорта и
+					развитость инфраструктуры. Этот продукт уже интегрирован с крупнейшими площадками недвижимости и будет включен в платформу "Наш Дом РФ".</p>
+
+				<blockquote>
+					"Наши технологии позволяют не просто собирать данные, а создавать интеллектуальные системы, которые реально улучшают качество жизни в городе", - отметил представитель
+					МосТрансПроекта.
+				</blockquote>
 
 				<div class="journal-author">Автор: Колотыгин Д.А.</div>
 			</article>
